[package]
name = "compressor"
version = "0.1.0"
edition = "2021"
description = "Browser-only ZIP compression powered by Rust and WebAssembly"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
console_error_panic_hook = { version = "0.1", optional = true }
